--- a/fly-gotosocial/fly.toml
+++ b/fly-gotosocial/fly.toml
@@ -15,6 +15,8 @@ processes = []
   GTS_DB_ADDRESS = "/data/sqlite.db"
   GTS_STORAGE_LOCAL_BASE_PATH = "/data/storage"
   GTS_ACCOUNTS_REGISTRATION_OPEN = "false"
+# Note that OIDC does not support admin groups when using Google (free, non-workspace) as the IDP.
+# So the current configuration is a little bit useless.
   GTS_OIDC_ENABLED = "true"
   GTS_OIDC_IDP_NAME = "Google"
   GTS_OIDC_ISSUER = "https://accounts.google.com"
